[gd_scene load_steps=22 format=3 uid="uid://dektwyqbnhmx"]

[ext_resource type="Script" uid="uid://8k1x3wksbkoq" path="res://Character/NPC/npc.gd" id="1_yxjim"]
[ext_resource type="Resource" uid="uid://1ij67xypck8j" path="res://Common/DialogInteraction/DialogResources/toriel_npc_resource.tres" id="2_wmwod"]
[ext_resource type="Shader" uid="uid://btkrlwieci037" path="res://ASSETS/SHADERS/replace_color2.gdshader" id="3_1hrnf"]
[ext_resource type="Texture2D" uid="uid://bu3fub213momw" path="res://ASSETS/EFFECTS/Shadow.png" id="3_14fxm"]
[ext_resource type="Texture2D" uid="uid://b562hywydvcwf" path="res://ASSETS/CHARACTER/toriel/toriel_spritesheet.png" id="3_n7naj"]
[ext_resource type="Script" uid="uid://bknf8jdoaffu5" path="res://Character/NPC/NPCBehavior/npc_state_machine.gd" id="5_1l7nj"]
[ext_resource type="Script" uid="uid://8qi4n8fgi3cg" path="res://Character/NPC/NPCBehavior/npc_state_idle.gd" id="6_1hrnf"]
[ext_resource type="Script" uid="uid://bfni4glkb2j68" path="res://Character/NPC/NPCBehavior/npc_state_wander.gd" id="7_e4tqv"]
[ext_resource type="Script" uid="uid://dd8047kciyx4r" path="res://Character/NPC/NPCBehavior/npc_patrol.gd" id="10_e4tqv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e4tqv"]
shader = ExtResource("3_1hrnf")
shader_parameter/original_0 = Color(0, 0, 0, 1)
shader_parameter/original_1 = Color(1, 1, 1, 1)
shader_parameter/original_2 = Color(0.36862746, 0.32941177, 0.57254905, 1)
shader_parameter/original_3 = Color(0.3372549, 0.3372549, 0.827451, 1)
shader_parameter/original_4 = Color(0, 0, 0, 1)
shader_parameter/original_5 = Color(0, 0, 0, 1)
shader_parameter/original_6 = Color(0, 0, 0, 1)
shader_parameter/original_7 = Color(0, 0, 0, 1)
shader_parameter/original_8 = Color(0, 0, 0, 1)
shader_parameter/replace_0 = Color(0.15686275, 0.15686275, 0.15686275, 1)
shader_parameter/replace_1 = Color(0.972549, 0.972549, 0.972549, 1)
shader_parameter/replace_2 = Color(0.6901961, 0.5647059, 0.972549, 1)
shader_parameter/replace_3 = Color(0.3137255, 0.4392157, 0.78431374, 1)
shader_parameter/replace_4 = Color(0, 0, 0, 1)
shader_parameter/replace_5 = Color(0, 0, 0, 1)
shader_parameter/replace_6 = Color(0, 0, 0, 1)
shader_parameter/replace_7 = Color(0, 0, 0, 1)
shader_parameter/replace_8 = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1l7nj"]
size = Vector2(15, 20)

[sub_resource type="Animation" id="Animation_6swda"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k1h6f"]
resource_name = "idle_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rovd1"]
resource_name = "idle_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_u08xh"]
resource_name = "idle_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_bey1f"]
resource_name = "walk_down"
length = 1.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_hhshi"]
resource_name = "walk_right"
length = 1.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_m2dqh"]
resource_name = "walk_up"
length = 1.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m2dqh"]
_data = {
&"RESET": SubResource("Animation_6swda"),
&"idle_down": SubResource("Animation_k1h6f"),
&"idle_right": SubResource("Animation_rovd1"),
&"idle_up": SubResource("Animation_u08xh"),
&"walk_down": SubResource("Animation_bey1f"),
&"walk_right": SubResource("Animation_hhshi"),
&"walk_up": SubResource("Animation_m2dqh")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1hrnf"]
size = Vector2(64, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e4tqv"]
size = Vector2(21, 11)

[node name="NPC_Toriel" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(0, 16)
collision_layer = 16
collision_mask = 48
motion_mode = 1
safe_margin = 8.0
script = ExtResource("1_yxjim")
npc_resource = ExtResource("2_wmwod")
npc_will_patrol = true

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
material = SubResource("ShaderMaterial_e4tqv")
position = Vector2(0, -1)
texture = ExtResource("3_n7naj")
offset = Vector2(0, -19.5)
hframes = 4
vframes = 4

[node name="ShadowSprite2D" type="Sprite2D" parent="Sprite2D"]
modulate = Color(0, 0, 0, 0.35000002)
show_behind_parent = true
z_index = -1
position = Vector2(0, 3)
texture = ExtResource("3_14fxm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(1.09278474e-07, -4)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_1l7nj")
debug_color = Color(0, 0.6, 0.69803923, 0.16862746)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_m2dqh")
}

[node name="NPCStateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_1l7nj")

[node name="Idle" type="Node" parent="NPCStateMachine" node_paths=PackedStringArray("next_state")]
unique_name_in_owner = true
script = ExtResource("6_1hrnf")
next_state = NodePath("../Wander")

[node name="Wander" type="Node2D" parent="NPCStateMachine" node_paths=PackedStringArray("next_state")]
unique_name_in_owner = true
script = ExtResource("7_e4tqv")
next_state = NodePath("../Idle")

[node name="Patrol" type="Node2D" parent="NPCStateMachine"]
unique_name_in_owner = true
script = ExtResource("10_e4tqv")

[node name="PDetArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PDetArea2D"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_1hrnf")
debug_color = Color(0.70196074, 0, 0.028420823, 0.41960785)

[node name="PushArea2D" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushArea2D"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_e4tqv")
debug_color = Color(0.70196074, 0.42629963, 0.05211371, 0.41960785)

[node name="CollTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.5
one_shot = true

[node name="Timer" type="Timer" parent="."]
